@@ -6,6 +6,8 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.45.00
 
+              pnmtoddif: fix crash with any PGM input.
+
               pgmnoise: fix bug: never generates full white pixel.
 
               pamditherbw: Fix -value other than .5 with -fs, -atkinson.
